# component-aws-cost-and-usage-reports

./: .gitignore  .uvignore  AGENTS.md  Dockerfile  README.md  bitbucket-pipelines.yml  flake8.cfg  pyproject.toml  requirements.txt
.github/workflows/: push.yml  push_test.yml
component_config/: component_long_description.md  component_short_description.md  configSchema.json  configuration_description.md
component_config/sample-config/: config.json
src/: aws_report_manager.py  column_normalizer.py  component.py  configuration.py  duckdb_client.py  duckdb_processor.py  woskpace_client.py
src/aws_report_handlers/: __init__.py  base_handler.py  cur_1_report_handler.py  cur_2_report_handler.py  handler_factory.py  version_detector.py
tests/: mock_s3_test_runner.py  test_component.py
tests/functional_tests/cur_1_0/: config.json  expected_output.csv
tests/functional_tests/cur_2_0/: config.json  expected_output.csv
tests/mock_data/cur_1_0/: sample_billing_data.csv
tests/mock_data/cur_1_0/s3_structure/mock-cur-bucket/20240101-20240131/: MockTestReport-Manifest.json
tests/mock_data/cur_2_0/s3_structure/mock-cur-v2-bucket/metadata/BILLING_PERIOD=2024-09/: MockTestReportV2-Manifest.json
