[project]
name = "component-aws-cost-and-usage-reports"
version = "1.0.0"
description = "AWS Cost and Usage Reports component for Keboola"
authors = [
    {name = "Keboola", email = "support@keboola.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "duckdb>=0.9.0",
    "keboola.component>=1.6.10",
    "keboola.utils>=1.0.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "dateparser>=1.2.0",
    "pytz>=2024.1",
    "regex>=2024.0.0",
    "pydantic>=2.6.0",
    "flake8>=7.3.0",
    "ruff>=0.8.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "mock>=4.0.0",
    "freezegun>=1.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
